--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -1,8 +1,10 @@
 .App {
   text-align: center;
+  font-family: 'Righteous', cursive;
 }
 .Header {
   color: #443e3e;
   text-shadow: 1px 1px 5px #fff;
+  font-size: 60px;
 }
 /* write your parent styles in here for your App.js */
